# libpmemobj-cpp

./: .appveyor.yml  .clang-format  .codecov.yml  .gitignore  .mailmap  .travis.yml  .version  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  LICENSE  README.md  appveyor.yml  codecov.yml  index.html  index.md  libpmemobj++.pc.in  libpmemobj-cpp.pc.in  travis.yml
benchmarks/: CMakeLists.txt  measure.hpp  readme.md
benchmarks/concurrent_hash_map/: insert_open.cpp
benchmarks/radix/: radix_tree.cpp
benchmarks/self_relative_pointer/: assignment.cpp  get.cpp
doc/: CMakeLists.txt  DoxygenLayout.xml  RELEASE_STEPS.md  groups_definitions.dox  libpmemobj++.Doxyfile.in
doc/shared/: pointer_requirements.txt  self_relative_pointer_implementation.txt
examples/: CMakeLists.txt  README  common.hpp  libpmemobj_cpp_examples_common.hpp  libpmemobj_cpp_examples_list.hpp  objcpp_examples_common.hpp  objcpp_examples_list.hpp
examples/array/: CMakeLists.txt  README.md  array.cpp
examples/concurrent_hash_map/: CMakeLists.txt  concurrent_hash_map.cpp  concurrent_hash_map_complex_types.cpp  concurrent_hash_map_string.cpp
examples/defrag/: CMakeLists.txt  defrag.cpp
examples/dictionary/: CMakeLists.txt  README.md  dictionary.hpp  dictionary_cli.cpp
examples/doc_snippets/: concurrent_hash_map.cpp  defrag.cpp  make_persistent.cpp  mutex.cpp  persistent.cpp  pointer_requirements.txt  pool.cpp  segment_vector.cpp  self_relative_pointer_implementation.txt  transaction.cpp  v.cpp
examples/inline_string/: CMakeLists.txt  inline_string.cpp
examples/make_persistent/: CMakeLists.txt  make_persistent.cpp
examples/map_cli/: CMakeLists.txt  ctree_map_persistent.hpp  ctree_map_transient.hpp  map_cli.cpp
examples/mpsc_queue/: CMakeLists.txt  mpsc_queue.cpp
examples/mutex/: CMakeLists.txt  mutex.cpp
examples/panaconda/: CMakeLists.txt  README  panaconda.cpp  panaconda.hpp
examples/persistent/: CMakeLists.txt  persistent.cpp
examples/pman/: CMakeLists.txt  README  pman.cpp
examples/pmpong/: Ball.cpp  Ball.hpp  CMakeLists.txt  GameConstants.hpp  GameController.cpp  GameController.hpp  GameOverView.cpp  GameOverView.hpp  GameView.cpp  GameView.hpp  MainGame.cpp  MenuView.cpp  MenuView.hpp  Paddle.cpp  Paddle.hpp  PongGameStatus.cpp  PongGameStatus.hpp  Pool.cpp  Pool.hpp  README  View.hpp
examples/pool/: CMakeLists.txt  pool.cpp  pool_as_class_member.cpp
examples/queue/: CMakeLists.txt  queue.cpp
examples/radix_tree/: CMakeLists.txt  multi_tier_map.cpp  radix_tree_basic.cpp  radix_tree_complex_value.cpp  radix_tree_custom_key.cpp  radix_tree_dot.cpp  radix_tree_inline_string.cpp  radix_tree_inline_string_uint8t_key.cpp
examples/segment_vector/: CMakeLists.txt  segment_vector.cpp
examples/simplekv/: CMakeLists.txt  simplekv.cpp  simplekv.hpp  simplekv_simple.cpp  simplekv_word_count.cpp
examples/simplekv_rebuild/: CMakeLists.txt  simplekv_rebuild.cpp  simplekv_rebuild.hpp  simplekv_rebuild_string.cpp
examples/slab/: CMakeLists.txt  slab.cpp
examples/string/: CMakeLists.txt  string.cpp
examples/transaction/: CMakeLists.txt  transaction.cpp
examples/v/: CMakeLists.txt  v.cpp
tests/: CMakeLists.txt  ctest_helpers.cmake  drd.supp  helgrind.supp  helpers.cmake  match  memcheck-libunwind.supp  memcheck.supp  test_backtrace.c  test_backtrace.h  true.cmake  valgrind_internal.cpp  valgrind_internal.hpp  wrap_pmemobj_defrag.h
tests/action/: action.cpp  action_0_memcheck.err.match  action_0_memcheck.match  action_0_pmemcheck.err.match
tests/aggregate_initialization/: aggregate_initialization.cpp
tests/allocator/: allocator.cpp
tests/array/: array.cpp  array_algorithms.cpp  array_is_aggregate.cpp  array_modifiers.cpp  array_slice.cpp  pmreorder.conf
tests/array_algorithms/: array_algorithms.cpp
tests/array_comparison/: array_comparison.cpp
tests/array_iterator/: array_iterator.cpp  array_iterator_noconv.cpp
tests/array_iterator_ordering/: array_iterator_ordering.cpp  array_iterator_ordering_0.cmake
tests/array_modifiers/: array_modifiers.cpp
tests/array_slice/: array_slice.cpp  array_slice_0.cmake
tests/array_slice_pmreorder/: array_slice_pmreorder.cpp  array_slice_pmreorder_0.cmake  array_slice_pmreorder_1.cmake
tests/array_transactions/: array_transactions.cpp
tests/check_is_pmem/: CMakeLists.txt  check_is_pmem.cpp
tests/cmake/: common_0.cmake  run_default.cmake
tests/common/: cont_test_common.hpp  default_constructible_only.hpp  emplace_constructible.hpp  helper_algorithm.hpp  helper_classes.hpp  helpers_test.cpp  iterators_common.hpp  iterators_support.hpp  list_wrapper.hpp  map_wrapper.hpp  mock_tx_alloc.cc  mock_tx_alloc.h  pthread_common.hpp  size_literals.hpp  thread_helpers.hpp  transaction_helpers.hpp  unittest.hpp  unittest_common.hpp  unittest_windows.hpp
tests/compatibility/: CMakeLists.txt  run.cmake
tests/concurrent_hash_map/: check_is_pmem.cmake  check_is_pmem_0.cmake  check_is_pmem_1.cmake  check_is_pmem_defrag.cmake  concurrent_hash_map.cpp  concurrent_hash_map_defrag.cpp  concurrent_hash_map_insert_erase.cpp  concurrent_hash_map_insert_lookup.cpp  concurrent_hash_map_insert_reopen.cpp  concurrent_hash_map_layout.cpp  concurrent_hash_map_layout.hpp  concurrent_hash_map_pmreorder_simple.cpp  concurrent_hash_map_rehash.cpp  concurrent_hash_map_rehash_check.cpp  concurrent_hash_map_rehash_deadlock.cpp  concurrent_hash_map_rehash_recursive.cpp  concurrent_hash_map_singlethread.cpp  concurrent_hash_map_string_test.hpp  concurrent_hash_map_tbb.cpp  concurrent_hash_map_tbb_insert_erase.cpp  concurrent_hash_map_tbb_insert_lookup.cpp  concurrent_hash_map_test.hpp  concurrent_hash_map_traits.hpp
tests/concurrent_hash_map_deadlock/: concurrent_hash_map_deadlock.cpp
tests/concurrent_hash_map_defrag/: concurrent_hash_map_defrag.cpp
tests/concurrent_hash_map_emplace/: concurrent_hash_map_emplace.cpp
tests/concurrent_hash_map_insert_erase/: concurrent_hash_map_insert_erase.cpp  concurrent_hash_map_tbb_insert_erase.cpp
tests/concurrent_hash_map_insert_lookup/: concurrent_hash_map_insert_lookup.cpp  concurrent_hash_map_tbb_insert_lookup.cpp
(+5652 files in other folders)
